# rusty-chatter

./: Cargo.toml  README.md
src/: chat.rs  main.rs  users.rs
static/: index.html  script.js
